# HighloadServerDz

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
headers/: FileReadersAndSenders.h  MainHandler.h  Pool.h  SQueue.h  Server.h  ThreadPool.h  Utils.h
nginx/: Dockerfile
